[package]
name = "clipcat"
version = "0.1.5"
edition = "2021"
description = "A command line tool for copying the contents to clipboard of multiple files in one go."
repository = "https://github.com/dcodesdev/clipcat"
license = "MIT"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
copypasta = "0.10.1"
tiktoken-rs = "0.6.0"
